@@ -106,10 +106,9 @@ public class ActionServiceImpl implements ActionService {
                 ActionPage = actionDao.findAll(searchSpecification, pageable);
             }
             else {
-                System.out.println("C'est ici !!");
                 ActionPage = actionDao.findAll(pageable);
             }
-            List<ActionDto> content = ActionPage.getContent().stream().map(actionMapper::deAction).collect(Collectors.toList());
+            List<ActionDto> content = ActionPage.getContent().stream().map(actionMapper::deAction).toList();
             DataTablesResponse<ActionDto> dataTablesResponse = new DataTablesResponse<>();
             dataTablesResponse.setDraw(parameters.getDraw());
             dataTablesResponse.setRecordsFiltered((int)ActionPage.getTotalElements());
